src/snapshots/afrotd__parser__tests__interpretation_9.2.2_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 2
index: 8
text: "1. und 10 von der A-40. Team A snapt von der linken Hash\nMark, gegenüber ihrer Teamzone. A81 hat sich weit außen auf der linken Seite der Formation aufgestellt. Vor dem Snap bewegt er sich in\nRichtung des Balles. Nach dem Snap nimmt A21 den Handoff und advanct hinter dem linken Tackle drei Meter. A81 unterbricht seinen Lauf\nnicht und befindet sich innerhalb der Hash Marks, als der Ball dead wird.\nA81 bewegt sich weiter in Richtung seiner Teamzone und täuscht vor,\ner würde das Spielfeld verlassen. A81 stellt sich dann in der Nähe der\nSeitenlinie auf. Team A wechselt nicht aus und sofort nach dem Snap\nwirft A12 einen Vorwärtspass auf A81, der unmittelbar an der Seitenlinie entlangläuft und zu einem Touchdown advanct."
ruling: "Team A\nLive Ball Foul. Unsportliches Verhalten durch unfaire Taktiken: Nutzung\ndes Auswechselprozesses, um Gegner zu täuschen. Strafe: 15 Meter\nvom Previous Spot."
