src/snapshots/afrotd__parser__tests__interpretation_9.2.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 3
index: 2
text: "Team A liegt neun Punkte zurück und hat einen 1. und 10 an\nder B-22. Die Game Clock zeigt 0:35. Beim Snap halten B21, B40 und\nB44 die beiden Team A-Ends offensichtlich fest, indem sie diese mit\nden Armen umfassen und zu Boden ziehen. Quarterback A12 kann keinen freien Receiver finden und muss seinen Gegnern ausweichen. Er\nwirft letztendlich den Ball legal weg. Nach diesem Down steht die Game Clock bei 0:26. Es liegen Flaggen auf dem Feld für das Halten an\nden berechtigten Receivern."
ruling: "Das ist ein offensichtlicher und\neklatant unfairer Akt mit dem Ziel, Zeit von der Game Clock zu nehmen.\nDer Referee ändert das Foul für das Festhalten zu einem unsportlichen Verhalten-Foul. Die Strafe wird mit Distanzhalbierung zu Team B’s\nGoalline durchgeführt. Team A hat einen 1. und 10 an der B-11. Die\nGame Clock wird auf 0:35 zurückgesetzt und startet mit dem Snap. Für\nB21, B40 und B44 erhöht sich der UNV-Zähler jeweils ein unsportliches\nVerhalten-Foul."
