src/snapshots/afrotd__parser__tests__interpretation_9.2.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 3
index: 3
text: "Team A liegt mit vier Punkten vorn und hat einen 4. und 10 an\nder A-30 mit 0:14 auf der Game Clock in der letzten Spielperiode. A12\nbefindet sich neun Meter hinter der neutralen Zone. Er erhält den Snap,\ngeht zurück in Richtung der eigenen Goalline und verlässt die Tackle\nBox. Beim Snap halten die Team A-Linemen offensichtlich die Team BSpieler vor sich fest und verhindern so, dass diese sofort dem Passer\nhinterherlaufen können. Als die Defender sich schließlich A12 nähern,\nwirft dieser den Ball hoch, so dass dieser jenseits der Scrimmage Line im Aus landet. Als der Ball auf den Boden prallt, steht die Game\nClock bei 0:00. Umpire und Referee haben jeweils eine Flagge für das\nFesthalten durch Team A."
ruling: "Das ist ein offensichtlicher und\neklatant unfairer Akt mit dem Ziel, Zeit von der Game Clock zu nehmen.\nDer Referee ändert das Foul für das absichtliche Halten zu einem unsportlichen Verhalten-Foul. Die Strafe wird mit 15 Metern vom Previous\nSpot durchgeführt. Team A’s Ball, 4. und 25 von der A-15. Die Game\nClock wird auf 0:14 zurückgesetzt und startet mit dem Snap. Für alle\nTeam A-Linemen erhöht sich der UNV-Zähler um jeweils ein unsportliches Verhalten-Foul."
