src/snapshots/afrotd__parser__tests__interpretation_9.2.5_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 5
index: 1
text: "Beim Eröffnungskickoff fängt B22 den Kick an seiner Goalline\nund trägt den Ball an Team B’s Seitenlinie entlang. Als der Sidejudge in der Schiedsrichterzone an der Seitenlinie entlang das Spielgeschehen verfolgt, läuft er entweder gegen einen Team B-Coach oder\nein Team B-Teammitglied oder muss einem Team B-Coach oder einem\nTeam B-Teammitglied ausweichen. B22 wird an der A-20 ins Aus gedrängt."
ruling: "Beide Situationen sind physische Behinderungen\neines Schiedsrichters während eines Downs. Es gibt dafür keine Warnung. Team B-Foul für unsportliches Verhalten, welches als Dead Ball\nFoul geahndet wird. Wenn der Team B Coach oder das Teammitglied\neindeutig identifiziert werden kann, wird das UNV-Foul dieser Person\nzugerechnet. Wird der Coach oder das Teammitglied nicht eindeutig\nidentifiziert, wird das UNV-Foul den Team zugerechnet. Nach der 15Meterstrafe ist es Team B’s Ball, 1. und 10 von der A-35."
