src/snapshots/afrotd__parser__tests__interpretation_9.2.5_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 5
index: 2
text: "Während ein Kickoff weit zurückgetragen wird, muss der Sidejudge stoppen und um den Head Coach herumlaufen, der sich außerhalb der Coaching Box in der Schiedsrichterzone oder auf dem Spielfeld\nin der Nähe der Seitenlinie befindet."
ruling: "Foul für unsportliches\nVerhalten. Als Dead Ball Foul durchführen. Die 15-Meterstrafe wird vom\nSucceeding Spot geahndet. Das UNV-Foul wird dem Head Coach zugerechnet und erhöht seinen UNV-Zähler, wobei das zweite UNV-Foul\nzu seiner Disqualifikation führt."
