src/snapshots/afrotd__parser__tests__interpretation_9.3.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 2
index: 1
text: "Bei dem Versuch, weiteren Raumgewinn zu erzielen, wird Ballträger A44 durch einige Defense Spieler aufgehalten, als sie versuchen,\nA44 zu tackeln. Back A22 (a) legt seine Hände auf den Rücken von\nA44 und drückt diesen vorwärts; (b) drückt gegen die Ansammlung von\nMitspielern, die sich um A44 herum befinden; (c) ergreift A44’s Arm\nund versucht, ihn zu weiterem Raumgewinn vorwärts zu ziehen."
ruling: "(a und b) Legales Spiel. Drücken des Ballträgers oder Drücken\ngegen die Ansammlung um den Ballträger ist kein Foul. (c) Foul für\nillegale Unterstützung für den Ballträger. 5-Meterstrafe nach dem Dreiund-Eins-Prinzip (Regel 9.3.2.b)."
