src/snapshots/afrotd__parser__tests__interpretation_9.3.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 3
index: 1
text: "A6 trägt den Ball. Während seines Laufes drückt A12 B2 heftig\nund hart in den Rücken über der Gürtellinie."
ruling: "Illegaler Block\nin den Rücken. Strafe – 10 Meter."
